roles/kubernetes/files/k8s/traefik-ds-2.3.yaml
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik
  namespace: kube-system
  labels:
    app: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
        name: traefik
    spec:
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:2.3.1
        name: traefik
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: https
          containerPort: 443
          hostPort: 443
        - name: admin
          containerPort: 8080
          hostPort: 8080
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
        #- --configFile=/etc/traefik.d/traefik.yaml
        - --api=true
        - --api.insecure=true
        - --api.dashboard=true
        - --ping=true
        - --ping.entryPoint=traefik
        - --log.level=DEBUG
        - --providers.kubernetesingress=true

        # entryPoints
        - --entryPoints.http.address=:80
        - --entryPoints.https.address=:443
        - --entryPoints.traefik.address=:8080 

        # redirect http to https
        - --entrypoints.http.http.redirections.entryPoint.to=https
        - --entrypoints.http.http.redirections.entryPoint.scheme=https

        #- --api
        #- --kubernetes
        #- --metrics
        #- --metrics.prometheus
        #- --ping
        #- --ping.entrypoint=traefik
        #- --logLevel=INFO
        #- --defaultentrypoints=https
        #- --entrypoints=Name:https Address::443 TLS TLS.MinVersion:VersionTLS12 TLS.SniStrict:true
        #- --entrypoints=Name:http Address::80
        #- --entrypoints=Name:traefik Address::8080
        volumeMounts:
          - name: traefik-configuration
            mountPath: /etc/traefik.d
          - mountPath: /etc/certs.d
            name: tls-default
            readOnly: true

      volumes:
        - name: traefik-configuration
          configMap:
            name: traefik-configuration
        - name: tls-default
          secret:
            secretName: hip-kiwi.k8s.o12stack.org-tls
---
kind: Service
apiVersion: v1
metadata:
  name: traefik
  namespace: kube-system
spec:
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 443
      name: https
    - protocol: TCP
      port: 8080
      name: admin
