roles/kubernetes/files/k8s/traefik-ds.yaml
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik
  namespace: kube-system
  labels:
    app: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
        name: traefik
    spec:
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:1.7.26
        name: traefik
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: https
          containerPort: 443
          hostPort: 443
        - name: admin
          containerPort: 8080
          hostPort: 8080
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
        - --api
        - --kubernetes
        - --metrics
        - --metrics.prometheus
        - --ping
        - --ping.entrypoint=traefik
        - --logLevel=INFO
        - --defaultentrypoints=https
        - --entrypoints=Name:https Address::443 TLS TLS.MinVersion:VersionTLS12 TLS.SniStrict:true
        - --entrypoints=Name:http Address::80
        - --entrypoints=Name:traefik Address::8080
---
kind: Service
apiVersion: v1
metadata:
  name: traefik
  namespace: kube-system
spec:
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 443
      name: https
    - protocol: TCP
      port: 8080
      name: admin
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: traefik-redirect-http
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/frontend-entry-points: http
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/priority: "0"
spec:
  defaultBackend:
    service:
      name: traefik
      port: 
        name: http
